examples/test/testpolicy13171.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13171
  namespace: namespace61
spec:
  podSelector:
    matchLabels:
      key34: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value8
          key38: value26
          key13: value21
      podSelector:
        matchLabels:
          key3: value12
          key7: value2
          key42: value7
